# TC

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.en.md  README.md  TODO.md  build.bat  tc.cpp  tc.h  tc.hpp  xmake.lua
.github/: FUNDING.yml
doc/: ansi_code_reference.md  ansi_reference.md  basic_ansi_code.md  os_support.md  tc_api_reference.md  tc_color_functions.md  tc_examples.md  tc_functionality.md  tc_key_handling.md  tc_quick_start.md  tc_terminal_functions.md  tc_updated_functionality.md  win7_compatibility_report.md  win7_deep_analysis.md
example/: 01_basic_output.cpp  02_color_output.cpp  03_font_styles.cpp  04_delay_operations.cpp  05_progress_bar.cpp  06_cursor_control.cpp  07_terminal_size.cpp  08_key_wait.cpp  09_typewriter_effect.cpp  10_color_menu.cpp  11_animation_effects.cpp  12_system_info.cpp  13_file_loading_progress.cpp  14_color_logger.cpp  15_interactive_cli.cpp  16_snake_game.cpp  17_guess_number_game.cpp  18_game_menu.cpp  19_key_press_detection.cpp  19_painting_game.cpp  20_terminal_printer_demo.cpp  Makefile
include/: tc.hpp  tc_colors.hpp  tc_print.hpp  tc_progress.hpp  tc_stream.hpp  tc_system.hpp  tc_system_utils.hpp  tc_terminal.hpp  tc_ui.hpp  tc_wait.hpp
test/: demo.cpp  test.cpp
